--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.7.0",
     "tailwind-merge": "^3.3.1"
   },
