--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.7.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
